# ProcessQueue

./: CMakeLists.txt  ProcessQueue.cbp  ProcessQueue.depend  ProcessQueue.layout  main.cpp  teste2.txt
filas/: teste2.txt
include/: mathExpression.hpp  node.hpp  processqueue.hpp  queue.hpp  sistema.hpp  stack.hpp  system.hpp
include/datastructures/: queue.hpp
include/processes/: computingProcess.hpp  printingProcess.hpp  process.hpp  readingProcess.hpp  writingProcess.hpp
src/: mathExpression.cpp  processqueue.cpp  sistema.cpp  system.cpp
src/processes/: computingProcess.cpp  printingProcess.cpp  process.cpp  readingProcess.cpp  writingProcess.cpp
